--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Hux."
+description: "你来了，我的朋友"
 header-img: "img/about-bg-walle.jpg"
 multilingual: true
 ---
